alignment issue in footer on smaller devices

--- a/less/_footer.less
+++ b/less/_footer.less
@@ -27,3 +27,8 @@ footer {
     }
   }
 }
+@media screen and (max-width:650px){
+  footer {
+    padding:3rem 1rem 6rem;
+  }
+}
